# Distributed-compute-cluster

./: .gitignore  Notes.md  README.md  Timetable.txt  pyproject.toml
cluster/: main.py
cluster/common/: Event.py  EventType.py  event.py  event_type.py
cluster/coordinator/: coordinator.py
cluster/dispatcher/: EventDispatcher.py  event_dispatcher.py
cluster/sender/: message_sender.py
cluster/serializer/: Serializer.py  serializer.py
cluster/worker/: worker.py
tests/: test_dispatcher.py  test_serializer.py
tests/integration_tests/: test_worker_coordinator.py
tests/unit_tests/: test_serializer.py
